--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -24409,6 +24409,15 @@ span.flatpickr-weekday {
 .flatpickr.form-control {
   background: #fff;
 }
+input[type="date"]:before {
+    content: attr(placeholder) !important;
+    color: #aaa;
+    margin-right: 0.5em;
+  }
+  input[type="date"]:focus:before,
+  input[type="date"]:valid:before {
+    content: "";
+  }
 
 .flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n+1)),
 .flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n+1)),
