--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,19 +1,22 @@
-{% extends 'userlayout.html' %}
-
-{% block title %}تسجيل الدخول  {% endblock title %}
+{% extends 'masterpage.html' %}
+{% load static %}
+{% block title %}  صحفية مال {% endblock title %}
 
 
 {% block body %}
-         <div class="m position-relative" style="background-color: #f4f4f4" >
-    <main class="main-content border-radius-sm">
-      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
-        <div class="container">
-          <div class="row pt-lg-8 pt-8" style="margin: 0 auto;">
-              <div class="col-lg-10 col-md-10">
-                          <div class="card h-100">
-            <div class="card-header">
-                <h3 class="font-weight-bolder text-black text-gradient">مرحبا بك</h3>
-            </div>
+<section class="min-vh-85 mb-8">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/back.jpg');">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 text-center mx-auto pt-lg-5">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+          <div class="col-6 mx-auto">
+              <div class="card z-index-0 box-shadow h-100">
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
@@ -27,21 +30,18 @@
                         <input type="password" name="password" id="password"  class="form-control" placeholder="كلمة المرور" aria-label="Password" aria-describedby="password-addon">
 
                     </div>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
-                        <label class="form-check-label" for="rememberMe">تذكرنى</label>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit"  class="btn bg-maal  w-100 mt-4 mb-0">تسجيل دخول</button>
+
+                        <div class="text-center">
+                        <button type="submit"  class="btn bg-maal text-white w-100 mt-4 mb-0">تسجيل دخول</button>
                     </div>
                 </form>
             </div>
         </div>
-
-        </div>
           </div>
-        </div>
       </div>
-    </main>
-     </div>
+    </div>
+</section>
 {% endblock body %}
+
+
+
