--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -16,18 +16,25 @@
     <div class="container">
       <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
                <div class="col-lg-12 col-md-12 mb-md-0 mb-4">
-          <div class="card">
-            <div class="card-header pb-0">
-              <div class="row">
-                <div class="col-lg-6 col-7">
-                  <h6>التقيمات البحثية</h6>
-                  <p class="text-sm mb-0">
-                    <i class="fa fa-check text-info" aria-hidden="true"></i>
-                    <span class="font-weight-bold ms-1">{{ rates.count }}</span> العدد المسجل
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="card z-index-0 ">
+                        <div class="card-header p-3">
+                            <div class="row  justify-content-center">
+                                <div class="col-12 justify-content-center">
+                                    <form method="get" class="form-inline justify-content-center">
+                                        {% csrf_token %}
+
+                                        {% for filed in myfilter.form %}
+                                            <div class="form-group  py-2">
+
+                                                {{ filed }}
+                                            </div>
+
+                                        {% endfor %}
+                                        <button class=" btn btn-primary py-2 bg-maal text-white">بحث</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
             <div class="card-body px-0 pb-2">
               <div class="table-responsive">
                                         <table style="margin:0 auto;" class="table table-max table-bordered align-items-center mb-auto">
@@ -120,3 +127,17 @@
     </div>
 </section>
 {% endblock body %}
+{% block scripts %}
+    <script>
+        document.getElementById("id_company").className = "form-control";
+        document.getElementById("id_company").setAttribute('placeholder', 'البحث باسم الشركة');
+        document.getElementById("id_code").className = "form-control";
+        document.getElementById("id_code").setAttribute('placeholder', 'البحث بكود الشركة');
+        document.getElementById("id_date_of_rate").className = "form-control";
+        document.getElementById("id_date_of_rate").setAttribute('type', 'date');
+        document.getElementById("id_date_of_rate").setAttribute('placeholder', 'تاريخ التوصية');
+        document.getElementById("id_analyst").className = "form-control";
+        document.getElementById("id_analyst").setAttribute('placeholder', 'البحث باسم المحلل');
+
+    </script>
+{% endblock scripts %}
