--- a/office/templates/office/add-rate.html
+++ b/office/templates/office/add-rate.html
@@ -5,123 +5,140 @@
 
 
 {% block body %}
-<div class="col-12 mt-4">
-    <div class="card mb-4">
-        <div class="card-header pb-0 p-3">
-            <h6 class="mb-1 text-bolder">ضافة!</h6>
-        </div>
-        <div class="card-body p-3">
-            <div class="row">
-                <div class="col-xl-10 col-md-10 mb-xl-0 mb-2">
-                    <div class="card card-blog card-plain">
-                        <div class="card-body px-1 pb-0">
-                            <form method="post" enctype="multipart/form-data">
-                             {% csrf_token %}
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="CompanyEntered">
-                                            الشركة
-                                            المدرجة
-                                        </label>
-<select name="CompanyEntered" id="CompanyEntered" class="form-control text-black-50">
-  {% for company in companies %}
-          <option value="{{ company.pk }}">{{ company.name }}</option>
+    <div class="col-12 mt-4">
+        <div class="card mb-4">
+            <div class="card-header pb-0 p-3">
+                <h6 class="mb-1 text-bolder">إضافة</h6>
+            </div>
+            <div class="card-body p-3">
+                <div class="row">
+                    <div class="col-xl-10 col-md-10 mb-xl-0 mb-2">
+                        <div class="card card-blog card-plain">
+                            <div class="card-body px-1 pb-0">
+                                <form method="post" enctype="multipart/form-data">
+                                    {% csrf_token %}
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="CompanyEntered">
+                                                الشركة
+                                                المدرجة
+                                            </label>
+                                            <select name="CompanyEntered" id="CompanyEntered"
+                                                    class="form-control text-black-50">
+                                                {% for company in companies %}
+                                                    <option value="{{ company.pk }}">{{ company.name }}</option>
 
-    {% endfor  %}
-</select>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="ResearchCompany">
-                                            شركة الأبحاث
-                                        </label>
-<select name="ResearchCompany" id="ResearchCompany" class="form-control text-black-50">
-  {% for company in researches %}
-          <option value="{{ company.pk }}">{{ company.name }}</option>
-    {% endfor  %}
-</select>                                    </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="AnalayticName">
-                                            إسم المحلل
-                                        </label>
-<select name="AnalayticName" id="AnalayticName" class="form-control text-black-50" >
-  {% for analyst in analysts %}
-          <option value="{{ analyst.pk }}">{{ analyst.name }}</option>
-    {% endfor  %}
-</select>
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="ResearchCompany">
+                                                شركة الأبحاث
+                                            </label>
+                                            <select name="ResearchCompany" id="ResearchCompany"
+                                                    class="form-control text-black-50">
+                                                {% for company in researches %}
+                                                    <option value="{{ company.pk }}">{{ company.name }}</option>
+                                                {% endfor %}
+                                            </select></div>
                                     </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="Recommendation">
-                                            التوصية
-                                        </label>
-                                        <input id="Recommendation" name="Recommendation" type="text" class="form-control text-black-50" asp-for="Recommendation" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="AnalayticName">
+                                                إسم المحلل
+                                            </label>
+                                            <select name="AnalayticName" id="AnalayticName"
+                                                    class="form-control text-black-50">
+                                                {% for analyst in analysts %}
+                                                    <option value="{{ analyst.pk }}">{{ analyst.name }}</option>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
                                     </div>
-                                </div>
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="Recommendation">
+                                                التوصية
+                                            </label>
+                                            <select id="Recommendation" name="Recommendation"
+                                                    class="form-control text-black-50">
+                                                <option value="3">محايد</option>
+                                                <option value="1">زيادة الوزن</option>
+                                                <option value="2">تخفيض الوزن</option>
+                                            </select>
+                                        </div>
+                                    </div>
 
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="FairValue">
-                                            القيمة العادلة
-                                        </label>
-                                        <input id="FairValue" name="FairValue" type="text" class="form-control text-black-50" asp-for="FairValue" placeholder="بالريال السعودى" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="FairValue">
+                                                القيمة العادلة
+                                            </label>
+                                            <input id="FairValue" name="FairValue" type="text"
+                                                   class="form-control text-black-50"
+                                                   placeholder="بالريال السعودى"/>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="CurrenncyValue">
-                                            السعر وقت التوصية
-                                        </label>
-                                        <input id="CurrenncyValue" name="CurrenncyValue" type="text" class="form-control text-black-50" asp-for="CurrenncyValue" placeholder="بالريال السعودى" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="CurrenncyValue">
+                                                السعر وقت التوصية
+                                            </label>
+                                            <input id="CurrenncyValue" name="CurrenncyValue" type="text"
+                                                   class="form-control text-black-50"
+                                                   placeholder="بالريال السعودى"/>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="MarketValue">
-                                            السعر السوقى
-                                        </label>
-                                        <input id="MarketValue" name="MarketValue" type="text" class="form-control text-black-50" asp-for="MarketValue" placeholder="بالريال السعودى" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="MarketValue">
+                                                السعر السوقى
+                                            </label>
+                                            <input id="MarketValue" name="MarketValue" type="text"
+                                                   class="form-control text-black-50" asp-for="MarketValue"
+                                                   placeholder="بالريال السعودى"/>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="rdate">
-                                               تاريخ التوصية
-                                        </label>
-                                        <input id="rdate" name="rdate" type="date" class="form-control text-black-50" placeholder="   تاريخ التوصية" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="rdate">
+                                                تاريخ التوصية
+                                            </label>
+                                            <input id="rdate" name="rdate" type="date"
+                                                   class="form-control text-black-50" placeholder="   تاريخ التوصية"/>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="report">
-                                            التقرير
-                                        </label>
-                                        <input name="report" id="report" type="file" class="form-control text-black-50"  placeholder="التقرير" />
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column">
+                                            <label for="report">
+                                                التقرير
+                                            </label>
+                                            <input name="report" id="report" type="file"
+                                                   class="form-control text-black-50" placeholder="التقرير"/>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column justify-content-center">
-                                            <input type="submit" class="btn btn-primary text-black-50 bg-maal" value="إضافة"/>
+                                    <div class="form-group row ">
+                                        <div class="col-10 d-flex flex-column justify-content-center">
+                                            <input type="submit" class="btn btn-primary text-black-50 bg-maal"
+                                                   value="إضافة"/>
 
 
+                                        </div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
 
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock body %}
