--- a/office/templates/office/add-company.html
+++ b/office/templates/office/add-company.html
@@ -48,6 +48,14 @@
 </select>
                                     </div>
                                 </div>
+                                 <div class="form-group row ">
+                                    <div class="col-10 d-flex flex-column">
+                                        <label for="link">
+                                            المسار                                        </label>
+                                        <input id="link" name="link" type="url" class="form-control text-black-50"  />
+
+                                    </div>
+                                </div>
 
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column justify-content-center">
