--- a/office/templates/office/edit-company.html
+++ b/office/templates/office/edit-company.html
@@ -27,6 +27,15 @@
 
                                     </div>
                                 </div>
+                                                             <div class="form-group row ">
+                                    <div class="col-10 d-flex flex-column">
+                                        <label for="link">
+                                            المسار                                        </label>
+                                        <input value="{{ company.link }}" id="link" name="link" type="url" class="form-control text-black-50"  />
+
+                                    </div>
+                                </div>
+
                                                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column">
                                         <label for="category">
