--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -22898,6 +22898,12 @@ hr.horizontal.gray-light {
 .btn.btn-slack.btn-neutral:active {
   color: #329874;
 }
+.table tbody{
+    background: #CCCCB2;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #757519, #CCCCB2);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #757519, #CCCCB2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 
 .table thead th  {
     border: 1px solid #aa952d !important;
@@ -22919,7 +22925,7 @@ hr.horizontal.gray-light {
  }
 /* Add some margins for each label */
   .table-max{
-        width:auto;
+        width:100%;
 
     }
 
