--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -46,129 +46,105 @@
 
                             </div>
 
-                            <div class="table-responsive">
+                <div class="table-responsive">
 
-                                <table class="table align-items-center mb-0">
-                                    <thead>
-                                    <tr>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                            الشركة المدرجة
-                                        </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                            شركة الأبحاث
-                                        </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                            توقعات الأرباح
-                                        </th>
+                    <table style="margin: 0 auto;" class="table table-max table-bordered align-items-center mb-auto">
+                        <thead class="text-black">
+                        <tr>
+                            <th class="text-dark text-xxs" style="width: 2rem;">
+                                الشركة
+                            </th>
+                            <th class="text-dark text-xxs " style="width: 2rem;">
+                                شركة الأبحاث
+                            </th>
+                            <th class="text-dark text-xxs " style="width: 2rem;">
+                                توقعات الأرباح
+                            </th>
 
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                            توقعات الأرباح
-                                        </th>
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                الربع الثالث 2020
+                            </th>
 
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                            اسم المحلل
-                                        </th>
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                            المرفق
-                                        </th>
-                                        <th class="text-secondary opacity-7"></th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for item in expectations %}
-                                        <tr>
-                                            <td>
-                                                <div class="d-flex px-2 py-1">
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                مدى الأنحراف
+                            </th>
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                الربع الثانى 2021
+                            </th>
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                مدى الأنحراف
+                            </th>
+                             <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                               الأرباح الفعلية
+                            </th>
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                المحلل
+                            </th>
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+                                المرفق
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for item in expects %}
+                            <tr>
+                                <td>
 
-                                                    <div class="d-flex flex-column justify-content-center">
-                                                        <h6 class="mb-0 text-sm">{{ item.CompanyEntered.name }}</h6>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex px-2 py-1">
+                                        <p class="mb-0 text-xxs">{{ item.CompanyEntered.name }}</p>
+                                </td>
+                                <td>
 
-                                                    <div class="d-flex flex-column justify-content-center">
-                                                        <h6 class="mb-0 text-sm">{{ item.ResearchCompany.name }}</h6>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="d-flex px-2 py-1">
+                                        <p class=" text-xxs">{{ item.ResearchCompany.name }}</p>
+                                </td>
+                                <td>
 
-                                                    <div class="d-flex flex-column justify-content-center">
-                                                        <h6 class="mb-0 text-sm">{{ item.expectvalue }}</h6>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td class="d-flex flex-column align-middle text-center text-sm">
-                                                <table class="table align-items-center mb-0">
-                                                    <thead>
-                                                    <tr>
-                                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                            السنه
-                                                        </th>
-                                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                                            الربع
-                                                        </th>
-                                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                            الأرباح الفعلية
-                                                        </th>
+                                    <p class="mb-0 text-xxs">{{ item.realEarn }}</p>
+                                </td>
+                                <td class="align-middle text-center text-sm">
+                                    <p class="mb-0 text-xxs">{{ item.third2020 }}</p>
 
-                                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                            مدى الأنحراف
-                                                        </th>
-                                                    </tr>
-                                                    </thead>
+                                </td>
+                                <td class="align-middle text-center">
+                                    {% if item.deviationthird2020 < 0 %}
+                                        <span class="text-danger text-lg font-weight-bold">{{ item.deviationthird2020|floatformat:-2 }} %</span>
+                                    {% else %}
+                                        <span class="text-success text-lg font-weight-bold">{{ item.deviationthird2020|floatformat:-2 }} %</span>
+                                    {% endif %}
+                                </td>
+                              <td class="align-middle text-center text-sm">
+                                    <p class="mb-0 text-xxs">{{ item.second2020 }}</p>
 
-                                                    <tbody>
-                                                    {% for expect in item.expectYear.all %}
-                                                        <tr>
-                                                            <td>
-                                                                <p class="text-xs font-weight-bold mb-0">{{ expect.year }}</p>
-                                                            </td>
-                                                            <td>
-                                                                <p class="text-xs font-weight-bold mb-0">{{ expect.quaratar }}</p>
-                                                            </td>
-                                                            <td>
-                                                                <p class="text-xs font-weight-bold mb-0">{{ expect.value }}</p>
-                                                            </td>
-                                                            <td class="align-middle text-center">
-                                                                {% if expect.deviation_range < 0 %}
-                                                                    <span class="text-danger text-lg font-weight-bold">{{ expect.deviation_range|floatformat:-2 }} %</span>
-                                                                {% else %}
-                                                                    <span class="text-success text-lg font-weight-bold">{{ expect.deviation_range|floatformat:-2 }} %</span>
-                                                                {% endif %}
-                                                            </td>
-                                                        </tr>
-                                                    {% endfor %}
-                                                    </tbody>
-                                                </table>
+                                </td>
+                              <td class="align-middle text-center text-sm">
+                                    {% if item.deviationsecond2020 < 0 %}
+                                        <span class="text-danger text-lg font-weight-bold">{{ item.deviationsecond2020|floatformat:-2 }} %</span>
+                                    {% else %}
+                                        <span class="text-success text-lg font-weight-bold">{{ item.deviationsecond2020|floatformat:-2 }} %</span>
+                                    {% endif %}
+                                </td>
+ <td class="align-middle text-center text-sm">
+                                    <p class="mb-0 text-xxs">{{ item.realEarn }}</p>
 
-                                            </td>
-                                            <td>
-                                                <p class="text-xs font-weight-bold mb-0">{{ item.analyst.name }}</p>
-                                            </td>
-                                            <td>
-                                                <a href="{{ item.report.url }}">
-                                                    <p class="text-xs font-weight-bold mb-0"><i
-                                                            class="far fa-file-pdf maal-yello"></i></p>
-                                                </a>
-                                            </td>
-                                            <td class="ms-auto text-start">
-                                                <a class="btn btn-link text-dark px-3 mb-0" href=""><i
-                                                        class="fas fa-pencil-alt text-primary me-2"
-                                                        aria-hidden="true"></i>المزيد</a>
+                                </td>
+                             <td class="align-middle text-center text-sm">
+                                    <p class="mb-0 text-xxs">{{ item.analyst.name }}</p>
 
-                                            </td>
+                                </td>
+                             <td class="align-middle text-center text-sm">
+                                   <a href="{{ item.report }}"><i class="fas fa-file-pdf" aria-hidden="true"></i></a>
+                                </td>
 
 
-                                        </tr>
-                                    {% endfor %}
+                            </tr>
+                        {% endfor %}
 
-                                    </tbody>
-                                </table>
-                            </div>                           {% endif %}
+                        </tbody>
+                    </table>
+
+                </div>
+
+
+                        {% endif %}
                     </div>
                 </div>
             </div>
